--- a/platforms/android/assets/www/index.html
+++ b/platforms/android/assets/www/index.html
@@ -1,34 +1,22 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
-		<title></title>
 
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <title></title>
+    <!--<link href="/css/preview-frame.css" rel="stylesheet">-->
+    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
 
-		<!--<link href="/css/preview-frame.css" rel="stylesheet">-->
-		<link href="lib/ionic/css/ionic.css" rel="stylesheet">
-		<link href="css/style.css" rel="stylesheet">
+    <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="js/app.js"></script>
+</head>
 
-		<!-- ionic/angularjs js -->
-		<script src="lib/ionic/js/ionic.bundle.js"></script>
-		
-		<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular-resource.min.js"></script>
+<body class="platform-android platform-cordova platform-webview">
+    <ion-pane>
+        <ion-nav-view></ion-nav-view>
+    </ion-pane>
+</body>
 
-		<!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
-		<link href="css/ionic.app.css" rel="stylesheet">
-		-->
-		
-		<script src="js/patriot.js"></script>
-		<script src="js/patriot.controller.js"></script>
-		<script src="js/patriot.service.js"></script>
-		
-	</head>
-	<body class="platform-android platform-cordova platform-webview">
-		<div ng-app="patriot">	
-			<ion-pane>
-				<ion-nav-view></ion-nav-view>
-			</ion-pane>
-		</div>
-	</body>
 </html>
